--- a/hugo.toml
+++ b/hugo.toml
@@ -13,10 +13,10 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 [params]
     brand = "Poison"                      # name of your site - appears in the sidebar
     brand_image = "/images/brand_image.jpg"    # path to the image shown in the sidebar
-    description = "Update this description..." # Used as default meta description if not specified in front matter
+    description = "Update this 1..." # Used as default meta description if not specified in front matter
     dark_mode = true                      # optional - defaults to false
     favicon = "/images/favicon.png"             # path to favicon (defaults to favicon.png)
-
+    front_page_content = ["tests"]
     # MENU PLACEHOLDER
     # Menu dict keys:
         # Name:         The name to display on the menu.
