--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,6 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     description = "Lucas Micoud's Cybersecurity blog" # Used as default meta description if not specified in front matter
     dark_mode = true                      # optional - defaults to false
     favicon = "/images/favicon.png"             # path to favicon (defaults to favicon.png)
-    front_page_content = ["posts"]
     # MENU PLACEHOLDER
     # Menu dict keys:
         # Name:         The name to display on the menu.
@@ -23,6 +22,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
+        {Name = "Articles", URL = "/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
         {Name = "CTF Write-Ups", URL = "/ctfWriteUps/", Pre = "Recent", HasChildren = true, Limit = 5},
     ]
 
