--- a/hugo.toml
+++ b/hugo.toml
@@ -13,7 +13,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     brand = "LumD"                      # name of your site - appears in the sidebar
     brand_image = "/images/brand_image.jpg"    # path to the image shown in the sidebar
     description = "Lucas Micoud's Cybersecurity blog" # Used as default meta description if not specified in front matter
-    dark_mode = true                      # optional - defaults to false
+    dark_mode = false                      # optional - defaults to false
     favicon = "/images/favicon.png"             # path to favicon (defaults to favicon.png)
     # MENU PLACEHOLDER
     # Menu dict keys:
