--- a/hugo.toml
+++ b/hugo.toml
@@ -48,7 +48,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     content_bg_color = "#FFFFF8"    # default is #FAF9F6
     post_title_color = "#C55A5B"    # default is #303030
     list_color = "#5a5a5a"          # default is #5a5a5a
-    link_color = "#268bd2"          # default is #268bd2
+    link_color = "#C55A5B"          # default is #268bd2
     date_color = "#515151"          # default is #515151
     table_border_color = "#E5E5E5"  # default is #E5E5E5
     table_stripe_color = "#F9F9F9"  # default is #F9F9F9
